fixed step two hardware image alignment

--- a/angular_app_frontend/features/journey_one/step-two/step-two.scss
+++ b/angular_app_frontend/features/journey_one/step-two/step-two.scss
@@ -72,6 +72,9 @@
       @include vertical-align()
 
     }
+    .hardware-name{
+      display: flex;
+    }
 
     .selected {
 
